Bug 179532 - The default window title should not be 'Calender <No filter>'
Summary: The default window title should not be 'Calender <No filter>'
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-03 19:57 UTC by Syam
Modified: 2009-01-23 02:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Syam 2009-01-03 19:57:56 UTC
Version:           4.1.0 (using KDE 4.1.3)
OS:                Linux
Installed from:    Fedora RPMs

Is <No filter> an appealing/meaningful/useful thing to be in the default window title?
Comment 1 Sergio Martins 2009-01-23 02:01:39 UTC
SVN commit 915429 by smartins:

Only use the filter's name in the title when one is being used.

BUG: 179532


 M  +4 -0      calendarview.cpp  
 M  +3 -0      calendarview.h  
 M  +3 -2      korganizer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=915429
Comment 2 Syam 2009-01-23 02:57:04 UTC
Thanks