Only use the filter's name in the title when one is being used.

BUG: 179532

svn path=/trunk/KDE/kdepim/; revision=915429